--- a/.gitignore
+++ b/.gitignore
@@ -16,3 +16,7 @@
 /appsettings.Development.json
 /appsettings.json
 /AspTwitter.csproj
+/AspTwitter.sln
+/Backend/AppData/data.db
+/Devlog.txt
+/Frontend/Web/lib/vue.js
