Added profile editing & avatars

--- a/.gitignore
+++ b/.gitignore
@@ -21,3 +21,5 @@
 /Devlog.txt
 /Frontend/Web/lib/vue.js
 /Frontend/Web/lib/jquery-3.5.1.min.js
+/Backend/AppData/Avatars/2.jpg
+/Frontend/Web/images/default_avatar.png
