--- a/.gitignore
+++ b/.gitignore
@@ -23,3 +23,4 @@
 /Frontend/Web/lib/jquery-3.5.1.min.js
 /Backend/AppData/Avatars/2.jpg
 /Frontend/Web/images/default_avatar.png
+/Backend/AppData/Avatars
