Configuring for heroku deployment

--- a/.gitignore
+++ b/.gitignore
@@ -37,3 +37,5 @@
 /Frontend/Web-Vue/logo.png
 /Frontend/Web-Vue/api-key.js
 /Migrations
+/Backend/Tests/bin/Release/net5.0/linux-x64
+/bin/Release/net5.0
