--- a/.gitignore
+++ b/.gitignore
@@ -53,3 +53,4 @@
 /Frontend/wwwroot
 /Frontend/Frontend.csproj
 /Frontend/Properties/launchSettings.json
+/Frontend/Shared/ProfileInfo.razor~RF625c2a12.TMP
